sort.baseball.NaiveBaseball.scala.error
Erreur de compilation :
NaiveBaseball:2: error: not found: value GetNombreBases
  var d1 : Int = (base - J1)%GetNombreBases()
                             ^NaiveBaseball:3: error: not found: value GetNombreBases
  var d2 : Int = (base - J2)%GetNombreBases()
                             ^